--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,19 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@0.0.4
-  aws-ecs: circleci/aws-ecs@0.0.3
+aws-ecr: circleci/aws-ecr@6.1.0
+aws-ecs: circleci/aws-ecs@0.0.8
 workflows:
-  build-and-deploy:
-    jobs:
-      - aws-ecr/build_and_push_image:
-          account-url: 'AWS_ECR_ACCOUNT_URL'
-          repo: 'dbc'
-          region: 'AWS_REGION'
-          tag: '${CIRCLE_SHA1}
-  '
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build_and_push_image
-          family: 'dbc-task'
-          cluster-name: 'dbc-cluster'
-          container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}'
+build_and_push_image:
+jobs:
+- aws-ecr/build-and-push-image:
+region: AWS_REGION
+account-url: AWS_ECR_ACCOUNT_URL
+repo: 'dbc' # GitHubのリポジトリ名
+tag: "${CIRCLE_SHA1}"
+- aws-ecs/deploy-service-update:
+requires:
+- aws-ecr/build-and-push-image
+family: 'dbc-task' # ECSのタスク定義名
+cluster-name: 'dbc-container' # ECSクラスター名
+service-name: 'dbc' # ECSのサービス名
+container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}' # タスク定義で指定しているコンテナ名
