--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
-          account-url: 'AWS_ECR_ACCOUNT_URL'
+          # account-url: 'AWS_ECR_ACCOUNT_URL'
           repo: 'dbc'
           region: 'us-east-2'
           tag: '${CIRCLE_SHA1}
@@ -16,5 +16,4 @@ workflows:
             - aws-ecr/build_and_push_image
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
-          service-name: 'dbc'
           container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}'
