--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
-          # account-url: 'AWS_ECR_ACCOUNT_URL'
+          account-url: '953316383391.dkr.ecr.ap-northeast-1.amazonaws.com/dbc'
           repo: 'dbc'
           region: 'us-east-2'
           tag: '${CIRCLE_SHA1}
