--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
       - aws-ecr/build_and_push_image:
           account-url: '${AWS_ECR_ACCOUNT_URL}'
           repo: 'dbc'
-          region: 'ap-northeast-1'
+          region: '${AWS_REGION}'
           tag: '${CIRCLE_SHA1}
   '
       - aws-ecs/deploy-service-update:
