--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,5 @@ workflows:
             - aws-ecr/build_and_push_image
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
-          service-name: 'dbc'
+          service: 'dbc'
           container-image-name-updates: 'container=dbc-container,image-and-tag=${AWS_ECR_ACCOUNT_URL}/dbc:${CIRCLE_SHA1}'
