--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,19 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@6.1.0
+  aws-ecr: circleci/aws-ecr@0.0.10
   aws-ecs: circleci/aws-ecs@0.0.8
 workflows:
-  jobs:
-    - aws-ecr/build_and_push_image:
-        account-url: '${AWS_ECR_ACCOUNT_URL}'
-        repo: 'dbc'
-        region: '${AWS_REGION}'
-        tag: '${CIRCLE_SHA1}
-'
-    - aws-ecs/deploy-service-update:
-        requires:
-          - aws-ecr/build_and_push_image
-        family: 'dbc-task'
-        cluster-name: 'dbc-cluster'
-        service-name: 'dbc'
-        container-image-name-updates: 'container=dbc-container,image-and-tag=${AWS_ECR_ACCOUNT_URL}/dbc:${CIRCLE_SHA1}'
+  build-and-deploy:
+    jobs:
+      - aws-ecr/build_and_push_image:
+          account-url: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+          repo: "dbc"
+          region: ${AWS_REGION}
+          tag: "${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build_and_push_image
+          aws-region: ${AWS_REGION}
+          family: "dbc-task"
+          cluster-name: "dbc-cluster"
+          container-image-name-updates: "container=dbc-container,tag=${CIRCLE_SHA1}"
