--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,19 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@1.0.0
-  aws-ecs: circleci/aws-ecs@0.0.6
+aws-ecr: circleci/aws-ecr@6.1.0
+aws-ecs: circleci/aws-ecs@0.0.8
 workflows:
-  build-and-deploy:
-    jobs:
-      - aws-ecr/build_and_push_image:
-          account-url: ${AWS_ECR_ACCOUNT_URL}
-          repo: 'dbc'
-          tag: '${CIRCLE_SHA1}'
-
-      - aws-ecs/deploy-service-update:
-                requires:
-                  - aws-ecr/build_and_push_image
-                family: 'dbc-task'
-                cluster-name: 'dbc-cluster'
-                container-image-name-updates: 'container=dbc-container,image-and-tag=${AWS_ECR_ACCOUNT_URL}/dbc:${CIRCLE_SHA1}'
+build_and_push_image:
+jobs:
+- aws-ecr/build-and-push-image:
+region: ${AWS_REGION}
+account-url: ${AWS_ECR_ACCOUNT_URL}
+repo: 'dbc'
+tag: "${CIRCLE_SHA1}"
+- aws-ecs/deploy-service-update:
+requires:
+- aws-ecr/build-and-push-image
+family: 'dbc-task'
+cluster-name: 'dbc-container'
+service-name: 'dbc'
+container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}'
