--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,40 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@6.1.0
-  aws-ecs: circleci/aws-ecs@0.0.8
+  aws-ecr: circleci/aws-ecr@1.0.0
+  aws-ecs: circleci/aws-ecs@0.0.6
+
+executors:
+  docker_build:
+    machine:
+      docker_layer_caching: true
+
 workflows:
-  build_and_push_image:
+  build-and-deploy:
     jobs:
-      - aws-ecr/build-and-push-image:
-        region: ${AWS_REGION}
-        account-url: ${AWS_ECR_ACCOUNT_URL}
-        repo: 'dbc'
-        tag: "${CIRCLE_SHA1}"
+      - build
+      - aws-ecr/build_and_push_image:
+          executor: docker_build
+          name: 'build-staging'
+          account-url: ${AWS_ECR_ACCOUNT_URL}
+          region: ${AWS_REGION}
+          repo: 'dbc'
+          tag: "${CIRCLE_SHA1}"
+          path: ./
+          dockerfile: Dockerfile-staging
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
       - aws-ecs/deploy-service-update:
-        requires:
-          - aws-ecr/build_and_push_image
-        family: 'dbc-task'
-        cluster-name: 'dbc-container'
-        service-name: 'dbc'
-        container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}'
+          requires:
+            - build-staging
+          family: 'dbc-task'
+          service-name: 'task'
+          cluster-name: 'task-cluster'
+          container-image-name-updates: 'container=dbc-container,image-and-tag=${AWS_ECR_ACCOUNT_URL}/${AWS_REGION}:${CIRCLE_SHA1}'
+          filters:
+            branches:
+              only:
+                - staging
