--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
       docker_layer_caching: true
 
 workflows:
-  build-and-deploy:
+  build_and_deploy:
     jobs:
       - build
       - aws-ecr/build_and_push_image:
