--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,4 @@ workflows:
             - aws-ecr/build_and_push_image
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
-          container-image-name-updates: 'container=dbc-container,image-and-tag=${AWS_ECR_ACCOUNT_URL}/dbc:${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}'
