--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,23 @@ version: '3.7'
 services:
   mysql:
     image: mysql:5.7
+    container_name: mysql_dbc
     volumes:
       - db_data:/var/lib/mysql
     restart: always
+    ports:
+      - 3306:3306
+    hostname: dbserver
     environment:
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_USER: dbc
+      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: login
 
   phpmyadmin:
     depends_on:
       - mysql
+    container_name: dbc_phpmyadmin
     image: phpmyadmin/phpmyadmin
     environment:
       PMA_HOST: mysql
