--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,5 +37,16 @@ services:
     depends_on:
       - mysql
 
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+        - "8025:8025"
+        - "1025:1025"
+    environment:
+        MH_STORAGE: maildir
+        MH_MAILDIR_PATH: /tmp
+    volumes:
+        - "./mailhog:/tmp"
+
 volumes:
     db_data: {}
