--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,6 @@ workflows:
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build_and_push_image
-          family: 'dbc-service'
+          family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           container-image-name-updates: 'container=dbc-container,tag=${CIRCLE_SHA1}'
