--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3.7'
 services:
   mysql:
     image: mysql:5.7
-    container_name: mysql_dbc
+    container_name: mysql
     volumes:
       - db_data:/var/lib/mysql
     restart: always
     ports:
       - 3306:3306
-    hostname: root
+    hostname: dbc
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: dbc
