--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
     jobs:
       - aws-ecr/build_and_push_image:
           account-url: '${AWS_ECR_ACCOUNT_URL}'
-          repo: 'dbc-service'
+          repo: 'dbc'
           region: '${AWS_REGION}'
           tag: '${CIRCLE_SHA1}
   '
@@ -16,4 +16,4 @@ workflows:
             - aws-ecr/build_and_push_image
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
-          container-image-name-updates: 'container=dbc-from-ecs,tag=${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=dbc-service,tag=${CIRCLE_SHA1}'
