--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,19 @@
 version: 2.1
-
 orbs:
-  aws-ecr: circleci/aws-ecr@6.0.0
+  aws-ecr: circleci/aws-ecr@0.0.10
   aws-ecs: circleci/aws-ecs@0.0.8
-
 workflows:
-  build_and_push_image:
+  build-and-deploy:
     jobs:
-      - aws-ecr/build-and-push-image:
-          region: AWS_REGION
+      - aws-ecr/build_and_push_image:
           account-url: AWS_ECR_ACCOUNT_URL
-          repo: 'dbc'
+          repo: dbc
+          region: ap-northeast-1
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
-            - aws-ecr/build-and-push-image
-          family: 'dbc-task'
-          cluster-name: 'dbc-cluster'
-          service-name: 'dbc'
-          container-image-name-updates: 'container=app,tag=${CIRCLE_SHA1}'
+            - aws-ecr/build_and_push_image
+          aws-region: ap-northeast-1
+          family: dbc-task
+          cluster-name: dbc-cluster
+          container-image-name-updates: container=app,tag=${CIRCLE_SHA1}
