--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ workflows:
       - aws-ecr/build_and_push_image:
           account-url: AWS_ECR_ACCOUNT_URL
           repo: dbc
-          region: ap-northeast-1
+          region: AWS_RESOURCE_NAME_PREFIX
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build_and_push_image
-          aws-region: ap-northeast-1
+          aws-region: AWS_RESOURCE_NAME_PREFIX
           family: dbc-task
           cluster-name: dbc-cluster
           container-image-name-updates: container=app,tag=${CIRCLE_SHA1}
