--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
-          account-url: 'AWS_ECR_ACCOUNT_URL'
+          account-url: 'AWS_ECR_ACCOUNT_URL
           repo: 'dbc'
           region: 'AWS_RESOURCE_NAME_PREFIX'
           tag: "${CIRCLE_SHA1}"
@@ -16,4 +16,4 @@ workflows:
           aws-region: 'AWS_RESOURCE_NAME_PREFIX'
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
-          container-image-name-updates: 'container=app,tag=${CIRCLE_SHA1}
+          container-image-name-updates: 'container=app,tag=${CIRCLE_SHA1}'
