--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
-          account-url: 'AWS_ECR_ACCOUNT_URL
+          account-url: 'AWS_ECR_ACCOUNT_URL'
           repo: 'dbc'
           region: 'AWS_RESOURCE_NAME_PREFIX'
           tag: "${CIRCLE_SHA1}"
