--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,4 @@ workflows:
           # aws-region: 'AWS_REGION'
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
-          container-image-name-updates: 'container=app,tag=${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=dbc,tag=${CIRCLE_SHA1}'
