--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,4 @@ workflows:
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
-          container-image-name-updates: 'container=app-container,tag=${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=app,tag=${CIRCLE_SHA1}'
