--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,18 @@ workflows:
     jobs:
       - aws-ecr/build_and_push_image:
           account-url: 'AWS_ECR_ACCOUNT_URL'
-          repo: 'dbc'
+          repo: 'dbc_mysql'
+          region: 'AWS_REGION'
+          tag: "${CIRCLE_SHA1}"
+      - aws-ecr/build_and_push_image:
+          account-url: 'AWS_ECR_ACCOUNT_URL2'
+          repo: 'dbc_php-apache'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build_and_push_image
           family: 'dbc-task'
-          cluster-name: 'dbc-clu'
-          service-name: 'dbc-ser'
+          cluster-name: 'dbc-cluster'
+          service-name: 'dbc'
           container-image-name-updates: 'container=appp,tag=${CIRCLE_SHA1}'
