--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ workflows:
       - aws-ecr/build_and_push_image:
           name: dbc_mysql
           account-url: 'AWS_ECR_ACCOUNT_URL'
-          repo: 'dbc_mysql'
+          repo: 'dbc'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
       - aws-ecr/build_and_push_image:
           name: dbc_php-apache
           account-url: 'AWS_ECR_ACCOUNT_URL2'
-          repo: 'dbc_php-apache'
+          repo: 'dbc'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
@@ -25,4 +25,3 @@ workflows:
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
           container-image-name-updates: 'container=appp,tag=${CIRCLE_SHA1}'
-          
