--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ workflows:
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
-            - dbc_mysql
-            - dbc_php-apache
+            - AWS_ECR_ACCOUNT_URL
+            - AWS_ECR_ACCOUNT_URL2
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
