--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,21 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
-          name: 'AWS_ECR_ACCOUNT_URL'
+          name: dbc_mysql
           account-url: 'AWS_ECR_ACCOUNT_URL'
-          repo: 'dbc'
+          repo: 'dbc_mysql'
           region: 'AWS_REGION'
-          # tag: "${CIRCLE_SHA1}"
+          tag: "${CIRCLE_SHA1}"
       - aws-ecr/build_and_push_image:
-          name: 'AWS_ECR_ACCOUNT_URL2'
+          name: dbc_php-apache
           account-url: 'AWS_ECR_ACCOUNT_URL2'
-          repo: 'dbc'
+          repo: 'dbc_php-apache'
           region: 'AWS_REGION'
-          # tag: "${CIRCLE_SHA1}"
+          tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
-            - 'AWS_ECR_ACCOUNT_URL'
-            - 'AWS_ECR_ACCOUNT_URL2'
+            - dbc_mysql
+            - dbc_php-apache
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
