--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,19 @@ workflows:
       - aws-ecr/build_and_push_image:
           name: dbc_mysql
           account-url: 'AWS_ECR_ACCOUNT_URL'
-          repo: 'dbc_mysql'
+          repo: 'dbc'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
-      - aws-ecr/build_and_push_image:
-          name: dbc_php-apache
-          account-url: 'AWS_ECR_ACCOUNT_URL2'
-          repo: 'dbc_php-apache'
-          region: 'AWS_REGION'
-          tag: "${CIRCLE_SHA1}"
+      # - aws-ecr/build_and_push_image:
+      #     name: dbc_php-apache
+      #     account-url: 'AWS_ECR_ACCOUNT_URL2'
+      #     repo: 'dbc'
+      #     region: 'AWS_REGION'
+      #     tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
             - dbc_mysql
-            - dbc_php-apache
+            # - dbc_php-apache
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
