--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
       - aws-ecr/build_and_push_image:
           name: dbc_mysql
           account-url: 'AWS_ECR_ACCOUNT_URL'
-          # repo: 'dbc'
+          repo: 'dbc_mysql'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
       # - aws-ecr/build_and_push_image:
