--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,24 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
+          name: 'dbc_mysql'
           account-url: 'AWS_ECR_ACCOUNT_URL'
           repo: 'dbc_mysql'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
+      - aws-ecr/build_and_push_image:
+          name: 'dbc_php-apache'
+          account-url: 'AWS_ECR_ACCOUNT_URL'
+          repo: 'dbc_php-apache'
+          region: 'AWS_REGION'
+          tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
-            - aws-ecr/build_and_push_image
+            - dbc_mysql
+            - dbc_php-apache
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
-          container-image-name-updates: 'container=dbc,tag=${CIRCLE_SHA1}'
-          
+          container-image-name-updates: 'container=dbc_mysql,tag=${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=dbc_php-apache,tag=${CIRCLE_SHA1}'
+
