--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,13 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
-          name: 'dbc_mysql'
+          name: dbc_mysql
           account-url: 'AWS_ECR_ACCOUNT_URL'
           repo: 'dbc_mysql'
           region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
       - aws-ecr/build_and_push_image:
-          name: 'dbc_php-apache'
+          name: dbc_php-apache
           account-url: 'AWS_ECR_ACCOUNT_URL'
           repo: 'dbc_php-apache'
           region: 'AWS_REGION'
@@ -26,4 +26,3 @@ workflows:
           service-name: 'dbc'
           container-image-name-updates: 'container=dbc_mysql,tag=${CIRCLE_SHA1}'
           container-image-name-updates: 'container=dbc_php-apache,tag=${CIRCLE_SHA1}'
-
