--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   mysql:
-    build: ./mysql
+    image: mysql:5.7
     volumes:
       - db_data:/var/lib/mysql
     restart: always
