--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,18 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@6.1.0
+  aws-ecr: circleci/aws-ecr@0.0.10
   aws-ecs: circleci/aws-ecs@0.0.8
 workflows:
-  build_and_push_image:
+  build-and-deploy:
     jobs:
-      - aws-ecr/build-and-push-image:
-          name: dbc_mysql
-          region: AWS_REGION
-          account-url: AWS_ECR_ACCOUNT_URL
-          repo: 'dbc_mysql'
-          tag: "${CIRCLE_SHA1}"
-      - aws-ecr/build-and-push-image:
-          name: dbc_php-apache
-          region: AWS_REGION
-          account-url: AWS_ECR_ACCOUNT_URL
+      - aws-ecr/build_and_push_image:
+          account-url: 'AWS_ECR_ACCOUNT_URL'
           repo: 'dbc_php-apache'
+          region: 'AWS_REGION'
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           requires:
-            - dbc_mysql
-          family: 'dbc-task'
-          cluster-name: 'dbc-cluster'
-          service-name: 'dbc'
-          container-image-name-updates: 'container=dbc_mysql,tag=${CIRCLE_SHA1}'
-      - aws-ecs/deploy-service-update:
-          requires:
-            - dbc_php-apache
+            - aws-ecr/build_and_push_image
           family: 'dbc-task'
           cluster-name: 'dbc-cluster'
           service-name: 'dbc'
