--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     hostname: $MYSQL_HOST
+    environment:
+      MYSQL_DATABASE: $MYSQL_DATABASE
+      MYSQL_ROOT_PASSWORD: $MYSQL_PASSWORD
+      MYSQL_USER: $MYSQL_USER
 
   php-apache:
     build: .
@@ -17,4 +21,4 @@ services:
       - "30:80"
 
 volumes:
-  db_data:
+  db_data: {}
